<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/chat" />
    <item
        android:id="@+id/nav_impact"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/eco_impact" />
    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/leaderboard" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
